--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.10.7",
+    "@types/wanakana": "^4.0.6",
     "animate.css": "^4.1.1",
     "canvas-confetti": "^1.6.0",
     "class-variance-authority": "^0.7.0",
@@ -54,6 +55,7 @@
     "typescript": "^4.0.3",
     "use-immer": "^0.9.0",
     "use-sound": "^4.0.1",
+    "wanakana": "^5.3.1",
     "xlsx": "^0.18.5"
   },
   "scripts": {
